// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> matches snapshot 1`] = `
<div>
  <fieldset
    class="css-1uomuaf-container-container"
    id="testRadioGroup"
  >
    <div
      class="css-1l41uua-radioButtonContainer-radioButtonContainer"
    >
      <input
        id="Test groupname-testOptionValue"
        name="Test groupname"
        type="radio"
        value="testOptionValue"
      />
      <label
        for="Test groupname-testOptionValue"
      >
        Test option label
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<RadioGroup /> matches snapshot with \`inline = true\` 1`] = `
<div>
  <fieldset
    class="my-radio-group css-1htw42g-container-container"
    id="my-id"
  >
    <div
      class="css-1l41uua-radioButtonContainer-radioButtonContainer"
    >
      <input
        id="Test groupname-testOptionValue"
        name="Test groupname"
        type="radio"
        value="testOptionValue"
      />
      <label
        for="Test groupname-testOptionValue"
      >
        Test option label
      </label>
    </div>
  </fieldset>
</div>
`;
